Add translation for the hierarchical facet

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -105,12 +105,12 @@ en:
         dated_mss_ssim: 'Dated Mss'
         annotation_text_tesim: 'Annotation text'
         annotation_tags_ssim: 'Annotation tags'
+        annotation_tags_facet_ssim: 'Annotation tags'
         resource_type_ssim: 'Resource type'
         collection_ssim: 'Collection'
         date_ssim: 'Date'
         name_ssim: 'Name'
         place_ssim: 'Place'
-        annotation_tags_ssim: 'Tags'
         language_ssim: 'Language'
         shelfmark_tsim: 'Shelfmark'
         title_tesim: 'Title'
