Hide/show the appropriately translated annotation tag fields

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,8 +110,10 @@ en:
         ending_date_ssim: 'Ending date'
         dated_mss_ssim: 'Dated Mss'
         annotation_text_tesim: 'Annotation text'
-        annotation_tags_ssim: 'Annotation tags'
-        annotation_tags_facet_ssim: 'Annotation tags'
+        annotation_tags_en_ssim: 'Annotation tags'
+        annotation_tags_facet_en_ssim: 'Annotation tags'
+        annotation_tags_it_ssim: 'Annotation tags'
+        annotation_tags_facet_it_ssim: 'Annotation tags'
         resource_type_ssim: 'Resource type'
         collection_ssim: 'Collection'
         date_ssim: 'Date'
