Update label for section field; fixes #242

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,3 +130,4 @@ en:
         explicit_tesim: 'Explicit'
         overview_tesim: 'Overview'
         summary_tesim: 'Summary'
+        iiif_structure_label_ssim: Section
